--- a/Clock/Clock/Clock.csproj
+++ b/Clock/Clock/Clock.csproj
@@ -6,4 +6,13 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Image.jpg" />
+    <None Remove="Image.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Image.png" />
+  </ItemGroup>
+
 </Project>
